# QuickJS-FFI-Demo

./: CMakeLists.txt  GEMINI.md  README.md  ffi-wrapper.js  libadd.c  main.c  main.cpp  qjs_ffi.c  qjs_ffi.cpp  qjs_ffi.h  test-encapsulated.js  test.js
.github/workflows/: test.yml
